--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,11 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  time:
+    formats:
+      long: "%d-%m-%y"
+      hello: "Hello world"
+      active_admin:
+        resources:
+          order:
+            new_model: "Create Order"
